--- a/First page.html
+++ b/First page.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome To Quiz</title>
-  <link rel="stylesheet" href="first pg css.css">
+  <link rel="stylesheet" href="firstpg.css">
 </head>
 <body>
   <div class="container">
@@ -36,7 +36,7 @@
         </label>
       </div>
       <div class="form-group">
-        <a href="file:///C:/Users/Admin/OneDrive/Desktop/WT%20project/choice%20page.html" target="blank" class="register-button">Register</a>
+        <a href="choicepg.html" target="blank" class="register-button">Register</a>
       </div>
     </form>
   </div>
