--- a/Second page.html
+++ b/Second page.html
@@ -4,14 +4,15 @@
         <meta charset="UTF-8">
         <meta viewport="viewport" content="widt=device-width, initial-scale=1.0">
         <title>Rules and regulation</title>
-        <link rel="stylesheet" href="second page css.css">
+        <link rel="stylesheet" href="secondpg.css">
+
     </head>
 <body>
     <div class="container">
         <h1>Quiz Rules and walkthrough</h1>
         <form action="#">
-        <h3>Welcome to quiz</h3>
-            <p>This is a multiple-choice quiz platform where you can test your knowledge in various categories. We offer three sets of quizzes: Technical Quiz, Non-Technical Quiz, and General Knowledge Quiz. Each quiz has its own set of rules, but the overall gameplay remains similar.</p>
+        <h3>Welcome to the Smart quiz</h3>
+            <p>This is a multiple-choice quiz platform where you can test your knowledge in various categories. We offer three sets of quizzes: Technical Quiz, Non-Technical Quiz, and Cricket Quiz. Each quiz has its own set of rules, but the overall gameplay remains similar.</p>
         <h3>General Rules:</h3>
             <p>1.Number of Questions: Each quiz will consist of 10 multiple-choice questions.
             <br>2.Time Limit: There is no time limit for any of the quizzes. You can take your time and answer at your own pace.
@@ -28,4 +29,7 @@
             <br>6.Next Question or Results:If you haven't answered all the questions, the next question will be displayed automatically.
                 If you've answered all the questions, your score will be displayed along with options to review answers or retake the quiz.
             </p>
+            <a href="firstpg.html" class="next-button">Next</a>
+              </div>
+
 
