--- a/startquiz.html
+++ b/startquiz.html
@@ -55,13 +55,13 @@
     <h1>Welcome to Smart Quiz</h1>
     <p>Are you ready to test your knowledge?</p>
     <button onclick="startQuiz()">Start Quiz</button>
-    <a href="C:\DAA\firstpg.html"></a>
+    <a href="C:\DAA\secongpg.html"></a>
   </div>
 
   <script>
     function startQuiz() {
       // Redirect to the quiz page or perform any other action to start the quiz
-      window.location.href = "firstpg.html"; // Change "quiz.html" to the actual URL of your quiz page
+      window.location.href = "secongpg.html"; // Change "quiz.html" to the actual URL of your quiz page
     }
   </script>
 </body>
